[tool.poetry]
name = "lab-4-pkg"
version = "2024.0.1.1"
description = ""
authors = ["tdubeuts22 <117575715+tdubeuts22@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "4.2.3"
pandas = "2.2.2"
scikit-learn = "1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
